# aoe-scientist

./: .gitignore  README.md  pyproject.toml
aoe_scientist/: __init__.py  idea_generator.py  idea_reviewer.py  llm.py  main.py  utils.py
config/: default.yaml
data/: ideas.csv  paper_dump.csv  reviews.csv  scholar_papers.csv
data/surveys/nas/: context.txt  nas_1000.txt  zero_shot.txt
data/surveys/neuroai/: ai_from_brain_study.txt  bic.txt  brains_bodies_ai.txt  catalyzing_neuroai.txt  comp_neuro.txt  context.txt  neuro_inspired_ml.txt  towards_neuroai.txt
data/surveys/neuroevolution/: context.txt  evolving_dnn.txt
plotters/: bar_plot.py  correlation_heatmap.py  heatmap_plot_score_variance.py  heatmap_plot_scores.py  researcher_scores.py
prompts/: idea_gen.json  idea_gen_rag.json  idea_review.json
scripts/: distill_surveys.py  parse_surveys.py  run_ideas.py  run_reviews.py  select_papers.py
tests/: llm_connection.py
